tests/sources/should-compile/function-calls.c
int func(){
    return 1;
}

void main(){
    int a = func();
    print(a);
}