tests/sources/should-not-compile/func-redeclared.c
void func();

void func()
{
}

void func()
{
}

void func();